Fixed footer font size too small

--- a/docroot/sites/all/themes/chm_theme_kit/css/style.css
+++ b/docroot/sites/all/themes/chm_theme_kit/css/style.css
@@ -10948,7 +10948,6 @@ table .views-field-title a:hover {
 #footer2 .footer-support {
   float: right;
   text-align: left;
-  font-size: 11px;
 }
 [dir="rtl"] #footer2 .footer-support {
   float: left;
