--- a/docroot/sites/all/themes/chm_theme_kit/less/footer.less
+++ b/docroot/sites/all/themes/chm_theme_kit/less/footer.less
@@ -61,7 +61,6 @@
       }
     }
     text-align: left;
-    font-size: 11px;
     .text {
       padding-left: 13px;
     }
